
[project]
name = "Chaoxing-playwright"
version = "0.0.1"
description = ""
authors = [
    {name = "Aison", email = "aisonsu@outlook.com"},
]
dependencies = [
    "playwright>=1.34.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "bandit>=1.7.5",
    "mypy>=1.3.0",
]
